--- a/modules/Actors/pom.xml
+++ b/modules/Actors/pom.xml
@@ -22,6 +22,10 @@
             <groupId>it.tidalwave.thesefoolishthings</groupId>
             <artifactId>it-tidalwave-messagebus</artifactId>
         </dependency>
+        <dependency>
+            <groupId>it.tidalwave.thesefoolishthings</groupId>
+            <artifactId>it-tidalwave-util</artifactId>
+        </dependency>
         
         <dependency>
             <groupId>org.netbeans.api</groupId>
