--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -17,20 +17,26 @@
     <name>TheseFoolishThings (modules)</name>
 
     <properties>
+        <beansbinding.version>1.2.1-201007271250</beansbinding.version>
+        <cglib.version>2.1.3-201002241208</cglib.version>
+        <incava.version>1.1.0</incava.version>
+        <javax-annotation.version>1.3.7-201002241900</javax-annotation.version>
         <javax-inject.version>1.0-201002241208</javax-inject.version>
         <joda-time.version>1.6.2-201110292322</joda-time.version>
+        <jsr305.version>1.3.7</jsr305.version> <!-- WARNING: don't use 1.3.8, it has got a broken pom which brings is tons of useless stuff! -->
+        <logback.version>0.9.30</logback.version>
         <netbeans.version>RELEASE712</netbeans.version>
         <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
         <slf4j.version>1.6.1</slf4j.version>
+        <slf4jk.version>${slf4j.version}-201106101300</slf4jk.version>
         <uuid.version>2.1.5-201007271250</uuid.version>
         <vaadin.version>6.6.1</vaadin.version>
-        
+
         <tft.UmlGraphDoc.additionalParam>-views -attributes -operations -types -postfixpackage -nodefontpackagesize 6 -nodefontclasssize 8 -nodefontsize 7 -edgefontsize 7 -nodesep 0.05 -ranksep 0.1 -visibility -inferrel -hide java.*|javax.*</tft.UmlGraphDoc.additionalParam>
        
         <tft.javac.source>1.5</tft.javac.source> <!-- For Android compatibility -->
         <tft.javac.target>1.5</tft.javac.target>
     </properties>
-    
 
     <dependencyManagement>
         <dependencies>
@@ -38,7 +44,7 @@
                 <!-- TODO: depend on BBB! -->
                 <groupId>com.kenai.nbpwr</groupId>
                 <artifactId>org-jdesktop-beansbinding</artifactId>
-                <version>1.2.1-201007271250</version>
+                <version>${beansbinding.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.vaadin</groupId>
@@ -48,12 +54,12 @@
             <dependency>
                 <groupId>com.kenai.nbpwr</groupId>
                 <artifactId>net-sf-cglib</artifactId>
-                <version>2.1.3-201002241208</version>
+                <version>${cglib.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.kenai.nbpwr</groupId>
                 <artifactId>javax-annotation</artifactId>
-                <version>1.3.7-201002241900</version>
+                <version>${javax-annotation.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.kenai.nbpwr</groupId>
@@ -63,7 +69,7 @@
             <dependency>
                 <groupId>com.kenai.nbpwr</groupId>
                 <artifactId>org-slf4j-jdk14</artifactId>
-                <version>1.6.1-201106101300</version>
+                <version>${slf4jk.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.kenai.nbpwr</groupId>
@@ -79,8 +85,7 @@
             <dependency>
                 <groupId>com.google.code.findbugs</groupId>
                 <artifactId>jsr305</artifactId>
-                <version>1.3.7</version>
-                <!-- WARNING: don't use 1.3.8, it has got a broken pom which brings is tons of useless stuff! -->
+                <version>${jsr305.version}</version>
             </dependency>
 
             <dependency>
@@ -105,13 +110,13 @@
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
-                <version>0.9.30</version>
+                <version>${logback.version}</version>
             </dependency>
             
             <dependency>
                 <groupId>org.incava</groupId>
                 <artifactId>org.incava.util.diff</artifactId>
-                <version>1.1.0</version>
+                <version>${incava.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
