--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -18,15 +18,15 @@
 
     <properties>
         <beansbinding.version>1.2.1-201007271250</beansbinding.version>
-        <cglib.version>2.1.3-201002241208</cglib.version>
+        <cglib.version>2.1.3-201003011305</cglib.version>
         <incava.version>1.1.0</incava.version>
         <javax-annotation.version>1.3.7-201002241900</javax-annotation.version>
         <javax-inject.version>1.0-201002241208</javax-inject.version>
         <joda-time.version>1.6.2-201110292322</joda-time.version>
-        <jsr305.version>1.3.7</jsr305.version> <!-- WARNING: don't use 1.3.8, it has got a broken pom which brings is tons of useless stuff! -->
-        <logback.version>0.9.30</logback.version>
-        <netbeans.version>RELEASE712</netbeans.version>
-        <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
+        <jsr305.version>2.0.1</jsr305.version>
+        <logback.version>1.0.7</logback.version>
+        <netbeans.version>RELEASE712-1</netbeans.version>
+        <org.springframework.version>3.1.0.RELEASE</org.springframework.version>
         <slf4j.version>1.6.1</slf4j.version>
         <slf4jk.version>${slf4j.version}-201106101300</slf4jk.version>
         <uuid.version>2.1.5-201007271250</uuid.version>
@@ -91,7 +91,7 @@
             <dependency>
                 <groupId>it.tidalwave.superpom</groupId>
                 <artifactId>platform</artifactId>
-                <version>${netbeans.version}-1</version>
+                <version>${netbeans.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
