--- a/modules/SpringRoles/pom.xml
+++ b/modules/SpringRoles/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>it-tidalwave-role-spring</artifactId>
     <version>1.0.36-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>TheseFoolishThings - Spring Roles</name>
+    <name>TheseFoolishThings - Roles (Spring)</name>
     <description>Specific Spring support for DCI roles</description>
     
     <dependencies>
