--- a/modules/examples/AsExample2/pom.xml
+++ b/modules/examples/AsExample2/pom.xml
@@ -20,6 +20,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>it.tidalwave.thesefoolishthings</groupId>
+            <artifactId>it-tidalwave-thesefoolishthings-examples-data</artifactId>
+        </dependency>
+        
+        
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
         </dependency>
