--- a/modules/examples/Data/pom.xml
+++ b/modules/examples/Data/pom.xml
@@ -10,20 +10,11 @@
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
-    <artifactId>it-tidalwave-thesefoolishthings-examples-asexample1</artifactId>
+    <artifactId>it-tidalwave-thesefoolishthings-examples-data</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>TheseFoolishThings Examples - As Example 1</name>
-
-    <properties>
-        <mainClass>it.tidalwave.thesefoolishthings.examples.asexample1.AsExample1</mainClass>
-    </properties>
+    <name>TheseFoolishThings Examples - Data</name>
 
     <dependencies>
-        <dependency>
-            <groupId>it.tidalwave.thesefoolishthings</groupId>
-            <artifactId>it-tidalwave-thesefoolishthings-examples-data</artifactId>
-        </dependency>
-        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
