--- a/modules/examples/pom.xml
+++ b/modules/examples/pom.xml
@@ -40,6 +40,7 @@
     <modules>
         <module>AsExample1</module>
         <module>AsExample2</module>
+        <module>Data</module>
         <module>FinderExample1</module>
         <module>FinderExample2</module>
         <module>FinderExample3</module>
