--- a/modules/examples/AsExample1/pom.xml
+++ b/modules/examples/AsExample1/pom.xml
@@ -78,5 +78,11 @@
             <artifactId>persistence-api</artifactId>
             <version>1.0</version> <!-- FIXME -->
         </dependency>
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.3.1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
