--- a/modules/examples/AsExample1/pom.xml
+++ b/modules/examples/AsExample1/pom.xml
@@ -73,6 +73,10 @@
             <artifactId>javax.inject</artifactId>
             <version>1</version>  <!-- FIXME -->
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
         
         <dependency>
             <artifactId>org-openide-util</artifactId>
