--- a/modules/examples/AsExample2/pom.xml
+++ b/modules/examples/AsExample2/pom.xml
@@ -55,7 +55,10 @@
             <groupId>org.netbeans.api</groupId>
             <scope>provided</scope>
         </dependency>
-        
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
         
         <dependency>
             <groupId>it.tidalwave.thesefoolishthings</groupId>
