--- a/modules/SpringRoles/pom.xml
+++ b/modules/SpringRoles/pom.xml
@@ -37,6 +37,13 @@
         <dependency>
             <groupId>it.tidalwave.thesefoolishthings</groupId>
             <artifactId>it-tidalwave-role</artifactId>
+            <!-- FIXME: causes the produced jar to be empty -->
+<!--            <exclusions>
+                <exclusion>
+                    <artifactId>org-slf4j-jdk14</artifactId>
+                    <groupId>com.kenai.nbpwr</groupId>
+                </exclusion>
+            </exclusions>-->
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
